recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:8: error: ')' expected but ';' found.
                                    gauche(angle;)
                                                ^Tree:8: error: illegal start of statement
                                    gauche(angle;)
                                                 ^